modification in index.js, index.ejs, angularApp.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
       <h1>News!</h1>
   </div>
   <span>
-     <a href="#/posts/{{$index}}">Comments</a>
+     <a href="#/posts/{{post._id}}">Comments</a>
   </span>
 
     <!-- rest of template -- inline html template -->
