--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,14 @@
     <head>
       <title>News!</title>
       <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-
-      <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
-      <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
       <script src="/javascripts/angularApp.js"></script>
       <style> .glyphicon-thumbs-up { cursor:pointer } </style>
     </head>
 
-    <body ng-app="flapperNews"> <!-- ng-controller="MainCtrl"> -->
+    <body ng-app="flapperNews" ng-controller="MainCtrl"> <!-- ng-controller="MainCtrl"> -->
       <div class = "row">
         <div class = "col-md-6 col-md-offset-3">
           <ui-view></ui-view>
